--- a/styles/style.css
+++ b/styles/style.css
@@ -247,6 +247,8 @@
 .footer__author {
   color: white;
   position: absolute;
+  bottom: 0px;
+  left: 0px;
   padding: 18px 0px;
   line-height: 25px;
   font-size: 18px;
