--- a/styles/style.css
+++ b/styles/style.css
@@ -140,12 +140,12 @@
 }
 
 .card__item {
-  padding: 60px 0;
+  margin-top: 60px;
   max-width: 240px;
   margin-right: 100px;
 }
 .card__item:nth-last-of-type(3n) {
-  margin: 0;
+  margin-right: 0;
 }
 
 .card__image {
@@ -300,34 +300,68 @@
 
 .khan {
   background-color: #f2f2f2;
-  padding: 100px auto 0;
+  margin-bottom: -215px;
 }
 
 .khan__container {
-  max-width: 80%;
+  width: 80%;
   margin: 0 auto 0;
+  padding: 105px 0 0;
+}
+
+.khan__author {
+  margin: 0;
+  line-height: 42px;
+  font-size: 30px;
+  font-weight: normal;
+}
+
+.khan__title {
+  margin: 0;
+  line-height: 1.15;
+  font-size: 60px;
+  font-weight: bold;
 }
 
 .khan__quote {
   max-width: 790px;
   margin: 50px 0 36px;
+  line-height: 34px;
+  font-size: 24px;
+  font-weight: normal;
 }
 
 .khan__quote-author {
-  margin-bottom: 10px;
+  margin: 0 0 10px;
+  line-height: 1.15;
+  font-size: 24px;
+  font-weight: bold;
 }
 
 .khan__quote-author-subline {
-  margin-bottom: 68px;
+  margin: 0 0 68px;
+  line-height: 1.15;
+  font-size: 24px;
+  font-weight: normal;
 }
 
 .khan__book-container {
-  width: 620px;
-  height: 608px;
+  display: flex;
+  align-items: flex-start;
 }
 
 .khan__book-pic{
   margin-right: 48px;
+  width: 620px;
+  height: 608px;
+}
+
+.khan__buy-link {
+  color: #2f80ed;
+  text-decoration: none;
+  line-height: 42px;
+  font-size: 30px;
+  font-weight: normal;
 }
 
 .kaufman {
@@ -368,6 +402,22 @@
   z-index: 0;
   width: 660px;
   height: 636px;
+  animation: rotation 20s linear infinite;
+}
+
+.resources {
+  margin: 100px auto 217px;
+}
+
+.resources__logo-zone {
+  max-width: 1100px;
+  margin: 80px auto 0;
+  text-decoration: none;
+}
+
+.resources__logo {
+  width: 270px;
+  height: 38px;
 }
 
 .footer {
