--- a/blocks/description/two-columns/__main-text/two-columns__main-text.css
+++ b/blocks/description/two-columns/__main-text/two-columns__main-text.css
@@ -1,6 +1,6 @@
-.khan__quote {
-  max-width: 790px;
-  margin: 50px 0 36px;
+.two-columns__main-text {
+  width: 80%;
+  min-width: 784px;
   line-height: 34px;
   font-size: 24px;
   font-weight: normal;
