--- a/blocks/logo/_place/logo_place_footer.css
+++ b/blocks/logo/_place/logo_place_footer.css
@@ -1,5 +1,5 @@
 .logo_place_footer {
-  background-image: url('../images/logo_place_footer.png');
+  background-image: url('../../../images/logo_place_footer.png');
   background-size: contain;
   background-repeat: no-repeat;
   background-position: center;
