--- a/blocks/logo/_place/logo_place_header.css
+++ b/blocks/logo/_place/logo_place_header.css
@@ -1,5 +1,5 @@
 .logo_place_header {
-  background-image: url('../images/logo_place_header.png');
+  background-image: url('../../../images/logo_place_header.png');
   background-size: contain;
   background-repeat: no-repeat;
   background-position: center;
