--- a/blocks/techniques/cards/__item/cards__item.css
+++ b/blocks/techniques/cards/__item/cards__item.css
@@ -1,9 +1,9 @@
-.card__item {
+.cards__item {
   margin-top: 60px;
   max-width: 240px;
   margin-right: 100px;
 }
 
-.card__item:nth-last-of-type(3n) {
+.cards__item:nth-last-of-type(3n) {
   margin-right: 0;
 }
