--- a/blocks/feynman/__title/feynman__title.css
+++ b/blocks/feynman/__title/feynman__title.css
@@ -1,7 +1,7 @@
 .feynman__title {
   margin: 0 auto;
   padding: 0 0 70px;
-  width: 776px;
+  max-width: 776px;
   line-height: 1.15;
   font-size: 120px;
   font-weight: bold;
