--- a/pages/index.css
+++ b/pages/index.css
@@ -1,5 +1,5 @@
 @import url('../vendor/normalize.css');
-@import url('../blocks/page.css');
+@import url('../blocks/page/page.css');
 @import url('../blocks/logo/_place/logo_place_header.css');
 @import url('../blocks/header/header.css');
 @import url('../blocks/header/__title/header__title.css');
@@ -16,11 +16,11 @@
 @import url('../blocks/section-title/section-title.css');
 @import url('../blocks/section-subtitle/section-subtitle.css');
 @import url('../blocks/techniques/techniques.css');
-@import url('../blocks/techniques/cards/cards.css');
-@import url('../blocks/techniques/cards/__item/cards__item.css');
-@import url('../blocks/techniques/cards/__image/cards__image.css');
-@import url('../blocks/techniques/cards/__title/cards__title.css');
-@import url('../blocks/techniques/cards/__description/cards__description.css');
+@import url('../blocks/cards/cards.css');
+@import url('../blocks/cards/__item/cards__item.css');
+@import url('../blocks/cards/__image/cards__image.css');
+@import url('../blocks/cards/__title/cards__title.css');
+@import url('../blocks/cards/__description/cards__description.css');
 @import url('../blocks/video/video.css');
 @import url('../blocks/video/__iframes/video__iframes.css');
 @import url('../blocks/video/__iframe/video__iframe.css');
